--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
+    "@nestjs/microservices": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^4.15.0",
+    "@types/cache-manager": "^4.0.2",
     "bcrypt": "^5.1.0",
+    "cache-manager": "^5.2.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "ioredis": "^5.3.2",
