--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "@types/cache-manager": "^4.0.2",
     "bcrypt": "^5.1.0",
     "cache-manager": "^5.2.3",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "connect-redis": "^7.1.0",
+    "express-session": "^1.17.3",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
